Enh 33740258 - [33733322->22.06] Support custom namespace handlers in the operational configuration file RQ job.9.20220110175350.14799 (merge main -> ce/main 89983)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 89993]